[gd_scene load_steps=5 format=3 uid="uid://70f31p3ep2df"]

[ext_resource type="Script" uid="uid://dgujtar0wab4b" path="res://levels/main_town/podium_spot.gd" id="1_qtor6"]
[ext_resource type="Texture2D" uid="uid://ts8dlthpqfc4" path="res://assets/[Anokolisa] Pixel Crawler - Free Pack 2.0.3/Environment/Structures/Buildings/Shadows.png" id="2_fh3f3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5yop6"]
atlas = ExtResource("2_fh3f3")
region = Rect2(80, 16, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh3f3"]
size = Vector2(24, 24)

[node name="PodiumSpot" type="Node2D" node_paths=PackedStringArray("_sprite", "_label")]
script = ExtResource("1_qtor6")
_sprite = NodePath("Sprite2D")
_label = NodePath("CanvasLayer/Label")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_5yop6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_fh3f3")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
